add vars and subtitle

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -12,6 +12,10 @@ header {
     color: #B58900;
     margin-left: 60px;
   }
+  
+  h2 {
+    margin-left: 60px;
+  }
 }
 
 ::-moz-selection { background: $magenta; text-shadow: none; }
