--- a/source/_includes/about_me.html
+++ b/source/_includes/about_me.html
@@ -3,7 +3,7 @@
       <li>Check out my site<a href="http://doridori.co.uk">doridori.co.uk</a></li>
   </ul>
   <ul class="toolbox">
-    <li>You can grab my <a href="http://feeds.feedburner.com/IvanJovanovic">RSS Feed</a></li>
+    <li>You can grab my <a href="http://feeds.feedburner.com/doriancussen">RSS Feed</a></li>
   </ul>
   <br style="clear:both;">
 
