--- a/source/_layouts/home.html
+++ b/source/_layouts/home.html
@@ -3,7 +3,8 @@
 
   <div id="container">
     <header>
-    <h1>the divine move</h1>
+    <h1>{{ site.title }}</h1>
+    <h2>{{ site.subtitle }}</h2>
     </header>
     <div id="main" role="main">
       {{ content | expand_urls: root_url }}
