--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -10,7 +10,8 @@ body {
 header {
   h1 {
     color: #B58900;
-    margin-left: 60px;
+    margin-left: 57px;
+    margin-bottom: 10px;
   }
   
   h2 {
