--- a/sass/code/_syntax.scss
+++ b/sass/code/_syntax.scss
@@ -1,35 +1,25 @@
-pre { margin: 0.8em 0;}
-code {
-  font-size: 1em;
+pre { 
+  margin: 0.8em 0;
 }
 
-.code {padding-left: 0px;}
+code {
+  font-size: 0.9em;
+}
 
 .highlight {
 
-  font-size: 0.8em;
-  line-height: 1.15em;
+  font-size: 1em;
+  line-height: 1.35em;
   font-weight: normal;
   margin: 10px 0 10px 0;
+  padding-left: 10px;
 
   .line-numbers {
     text-align: right;
     font-size: 1em;
     line-height: 1.35em;
-    @if $solarized == light {
-      background: lighten($base03, 1) $noise-bg !important;
-      border-right: 1px solid darken($base02, 2) !important;
-      @include box-shadow(lighten($base03, 2) -1px 0 inset);
-      text-shadow: lighten($base02, 2) 0 -1px;
-    } @else {
-      background: $base02 $noise-bg !important;
-      border-right: 1px solid darken($base03, 2) !important;
-      @include box-shadow(lighten($base02, 2) -1px 0 inset);
-      text-shadow: darken($base02, 10) 0 -1px;
-    }
+    
     span { color: $base01 !important; }
-    padding: .8em !important;
-    margin: 0;
     @include border-radius(0);
 
     .ie8 & {
