--- a/sass/code/_syntax.scss
+++ b/sass/code/_syntax.scss
@@ -2,8 +2,12 @@ pre {
   margin: 0.8em 0;
 }
 
-code {
-  font-size: 0.9em;
+.code {
+  font-size: 12px;
+}
+
+td.code {
+  padding-left:10px;
 }
 
 .highlight {
