--- a/source/_includes/post/sharing.html
+++ b/source/_includes/post/sharing.html
@@ -3,6 +3,6 @@
   <a href="http://twitter.com/share" class="twitter-share-button" data-url="{{ site.url }}{{ page.url }}" data-via="{{ site.twitter_user }}" data-counturl="{{ site.url }}{{ page.url }}" >Tweet</a>
   {% endif %}
   {% if site.google_plus_one %}
-  <div class="g-plusone" data-size="{{ site.google_plus_one_size }}"></div>
+  <div class="g-plusone" href="{{ site.url }}{{ page.url }}" data-size="{{ site.google_plus_one_size }}"></div>
   {% endif %}
 </div>
