change g+ to show inline data - add pink link rules

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -199,16 +199,17 @@ article {
   }
 }
 
-.pink {
-   a {
+a strong {
+   
     margin-right: 15px;
     background-color: $magenta;
     padding: 3px;
+    color: #fff;
 
     &, &:visited, &:hover {
       text-decoration: none;
       color: #fff;
-    }
+    
   }
 }
 
